Fix stuck Goggles on websocket reconnect

--- a/frontend/src/app/components/block-overview-graph/block-overview-graph.component.scss
+++ b/frontend/src/app/components/block-overview-graph/block-overview-graph.component.scss
@@ -60,6 +60,5 @@
 
   &.hidden {
     opacity: 0;
-    transition: opacity 500ms;
   }
 }
